--- a/packages/ack-x402/package.json
+++ b/packages/ack-x402/package.json
@@ -1,61 +1,35 @@
 {
   "name": "@agentcommercekit/ack-x402",
   "version": "0.1.0",
-  "homepage": "https://github.com/agentcommercekit/ack#readme",
-  "bugs": "https://github.com/agentcommercekit/ack/issues",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/agentcommercekit/ack.git",
-    "directory": "packages/ack-x402"
-  },
-  "license": "MIT",
-  "author": {
-    "name": "Catena Labs",
-    "url": "https://catenalabs.com"
-  },
+  "description": "x402 and ACK integration example",
   "type": "module",
-  "exports": {
-    "./package.json": "./package.json",
-    ".": {
-      "types": "./dist/index.d.ts",
-      "default": "./dist/index.js"
-    }
-  },
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "files": [
-    "dist",
-    "package.json",
-    "LICENSE",
-    "README.md"
-  ],
   "scripts": {
-    "build": "tsdown src/index.ts --dts --silent",
-    "check:types": "tsc --noEmit",
-    "clean": "git clean -fdX .turbo dist",
-    "dev": "pnpm build --watch --no-clean",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "test": "vitest"
+    "server": "tsx src/server.ts",
+    "client": "tsx src/client.ts",
+    "dev": "tsx watch src/server.ts",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run"
   },
   "dependencies": {
+    "@hono/node-server": "^1.8.0",
+    "hono": "^4.0.0",
+    "@agentcommercekit/ack-id": "workspace:*",
     "@agentcommercekit/ack-pay": "workspace:*",
     "@agentcommercekit/did": "workspace:*",
     "@agentcommercekit/jwt": "workspace:*",
-    "@agentcommercekit/keys": "workspace:*",
     "@agentcommercekit/vc": "workspace:*",
-    "x402-next": "^0.4.0"
+    "@agentcommercekit/keys": "workspace:*",
+    "ethers": "^5.7.2"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "eslint": "^9.27.0",
-    "tsdown": "^0.11.12",
-    "typescript": "^5",
-    "vitest": "^3.1.4",
-    "x402-fetch": "^0.3.0"
-  },
-  "publishConfig": {
-    "access": "public"
+    "@types/node": "^20.11.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.0",
+    "vitest": "^1.2.0",
+    "@vitest/ui": "^1.2.0"
   }
 }
