--- a/packages/ack-x402/tsconfig.json
+++ b/packages/ack-x402/tsconfig.json
@@ -1,5 +1,14 @@
 {
   "extends": "@repo/typescript-config/typescript-library.json",
-  "include": ["."],
+  "compilerOptions": {
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "target": "ES2022",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true
+  },
+  "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
