--- a/packages/did/package.json
+++ b/packages/did/package.json
@@ -38,7 +38,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "tsdown src/index.ts src/schemas/zod.ts src/schemas/valibot.ts --dts --silent",
+    "build": "tsdown",
     "check:types": "tsc --noEmit",
     "clean": "git clean -fdX .turbo dist",
     "dev": "pnpm build --watch --no-clean",
