Implement basic A2A demo for ACK-ID identity exchange

--- a/demos/e2e/package.json
+++ b/demos/e2e/package.json
@@ -19,9 +19,9 @@
   "scripts": {
     "check:types": "tsc --noEmit",
     "clean": "git clean -fdX .turbo",
+    "demo": "tsx ./src/index.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "start": "tsx ./src/index.ts",
     "test": "vitest"
   },
   "dependencies": {
