--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "check:packages": "pnpx @manypkg/cli check",
     "check:types": "turbo check:types",
     "clean": "turbo clean && git clean -xdf .turbo node_modules/.cache",
-    "demo:e2e": "pnpm --filter ./demos/e2e start",
-    "demo:identity": "pnpm --filter ./demos/identity start",
-    "demo:payments": "pnpm --filter ./demos/payments start",
+    "demo:e2e": "pnpm --filter ./demos/e2e demo",
+    "demo:identity": "pnpm --filter ./demos/identity demo",
+    "demo:identity-a2a": "pnpm --filter ./demos/identity-a2a demo",
+    "demo:payments": "pnpm --filter ./demos/payments demo",
     "dev:docs": "pnpm --filter ./docs docs",
     "dev:examples": "turbo dev",
     "fix": "turbo fix",
