--- a/demos/identity-a2a/package.json
+++ b/demos/identity-a2a/package.json
@@ -24,9 +24,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@a2a-js/sdk": "^0.2.2",
     "@repo/cli-tools": "workspace:*",
-    "a2a-js": "^0.2.0",
     "agentcommercekit": "workspace:*",
+    "express": "^4.21.2",
     "jose": "^6.0.11",
     "safe-stable-stringify": "^2.5.0",
     "uuid": "^11.1.0",
@@ -35,7 +36,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/express": "^5.0.3",
+    "@types/express": "5.0.3",
     "@types/node": "^22",
     "eslint": "^9.27.0",
     "tsx": "^4.19.4",
