--- a/packages/ack-id/package.json
+++ b/packages/ack-id/package.json
@@ -80,12 +80,13 @@
     "@agentcommercekit/keys": "workspace:*",
     "@agentcommercekit/vc": "workspace:*",
     "safe-stable-stringify": "^2.5.0",
+    "uuid": "^11.1.0",
     "valibot": "^1.1.0"
   },
   "devDependencies": {
+    "@a2a-js/sdk": "^0.2.2",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "a2a-js": "^0.2.0",
     "eslint": "^9.27.0",
     "tsdown": "^0.11.12",
     "typescript": "^5",
@@ -93,11 +94,11 @@
     "zod": "^3.25.0"
   },
   "peerDependencies": {
-    "a2a-js": "^0.2.0",
+    "@a2a-js/sdk": "^0.2.2",
     "zod": "^3.25.0"
   },
   "peerDependenciesMeta": {
-    "a2a-js": {
+    "@a2a-js/sdk": {
       "optional": true
     },
     "zod": {
