--- a/packages/agentcommercekit/package.json
+++ b/packages/agentcommercekit/package.json
@@ -83,9 +83,9 @@
     "@agentcommercekit/vc": "workspace:*"
   },
   "devDependencies": {
+    "@a2a-js/sdk": "^0.2.2",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "a2a-js": "^0.2.0",
     "eslint": "^9.27.0",
     "tsdown": "^0.11.12",
     "typescript": "^5",
@@ -94,12 +94,12 @@
     "zod": "^3.25.0"
   },
   "peerDependencies": {
-    "a2a-js": "^0.2.0",
+    "@a2a-js/sdk": "^0.2.2",
     "valibot": "^1.0.0",
     "zod": "^3.25.0"
   },
   "peerDependenciesMeta": {
-    "a2a-js": {
+    "@a2a-js/sdk": {
       "optional": true
     },
     "valibot": {
