--- a/packages/did/package.json
+++ b/packages/did/package.json
@@ -67,9 +67,10 @@
     "@repo/typescript-config": "workspace:*",
     "@types/varint": "^6.0.3",
     "eslint": "^9.27.0",
+    "standard-parse": "^0.3.0",
     "tsdown": "^0.11.12",
     "typescript": "^5",
-    "vitest": "^3.1.4",
+    "vitest": "^3.2.4",
     "zod": "^3.25.0"
   },
   "peerDependencies": {
