--- a/packages/agentcommercekit/package.json
+++ b/packages/agentcommercekit/package.json
@@ -77,6 +77,7 @@
   "dependencies": {
     "@agentcommercekit/ack-id": "workspace:*",
     "@agentcommercekit/ack-pay": "workspace:*",
+    "@agentcommercekit/caip": "workspace:*",
     "@agentcommercekit/did": "workspace:*",
     "@agentcommercekit/jwt": "workspace:*",
     "@agentcommercekit/keys": "workspace:*",
