Use kit + code review

--- a/demos/payments/package.json
+++ b/demos/payments/package.json
@@ -29,11 +29,14 @@
     "@hono/node-server": "^1.14.2",
     "@repo/api-utils": "workspace:*",
     "@repo/cli-tools": "workspace:*",
-    "@solana/spl-memo": "^0.2.5",
-    "@solana/spl-token": "^0.4.14",
-    "@solana/web3.js": "^1.98.4",
+    "@solana-program/system": "^0.9.0",
+    "@solana-program/token": "^0.6.0",
+    "@solana/addresses": "^4.0.0",
+    "@solana/keys": "^4.0.0",
+    "@solana/kit": "^4.0.0",
     "agentcommercekit": "workspace:*",
     "bs58": "^6.0.0",
+    "gill": "^0.12.0",
     "hono": "^4.7.10",
     "valibot": "^1.1.0",
     "viem": "^2.29.4"
