--- a/demos/e2e/package.json
+++ b/demos/e2e/package.json
@@ -27,15 +27,15 @@
   "dependencies": {
     "@repo/cli-tools": "workspace:*",
     "agentcommercekit": "workspace:*",
-    "valibot": "^1.1.0",
-    "viem": "^2.29.4"
+    "valibot": "1.1.0",
+    "viem": "2.29.4"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "eslint": "^9.27.0",
-    "tsx": "^4.19.4",
-    "typescript": "^5",
-    "vitest": "^3.2.4"
+    "eslint": "9.27.0",
+    "tsx": "4.19.4",
+    "typescript": "5.7.3",
+    "vitest": "3.2.4"
   }
 }
