--- a/tools/eslint-config/package.json
+++ b/tools/eslint-config/package.json
@@ -21,16 +21,16 @@
   },
   "main": "./base.js",
   "devDependencies": {
-    "@cspell/eslint-plugin": "^9.0.1",
-    "@eslint/js": "^9.27.0",
-    "@eslint/json": "^0.12.0",
-    "@eslint/markdown": "^6.4.0",
-    "eslint": "^9.27.0",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-import-resolver-typescript": "^4.3.5",
-    "eslint-plugin-import-x": "^4.12.2",
-    "eslint-plugin-turbo": "^2.5.3",
-    "typescript": "^5",
-    "typescript-eslint": "^8.32.1"
+    "@cspell/eslint-plugin": "9.0.1",
+    "@eslint/js": "9.27.0",
+    "@eslint/json": "0.12.0",
+    "@eslint/markdown": "6.4.0",
+    "eslint": "9.27.0",
+    "eslint-config-prettier": "10.1.5",
+    "eslint-import-resolver-typescript": "4.3.5",
+    "eslint-plugin-import-x": "4.12.2",
+    "eslint-plugin-turbo": "2.5.3",
+    "typescript": "5.7.3",
+    "typescript-eslint": "8.32.1"
   }
 }
