--- a/demos/e2e/package.json
+++ b/demos/e2e/package.json
@@ -32,10 +32,6 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-    "eslint": "9.27.0",
-    "tsx": "4.19.4",
-    "typescript": "5.7.3",
-    "vitest": "3.2.4"
+    "@repo/typescript-config": "workspace:*"
   }
 }
