--- a/demos/identity-a2a/package.json
+++ b/demos/identity-a2a/package.json
@@ -36,11 +36,6 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/express": "5.0.3",
-    "@types/node": "22.18.13",
-    "eslint": "9.27.0",
-    "tsx": "4.19.4",
-    "typescript": "5.7.3",
-    "vitest": "3.2.4"
+    "@types/express": "5.0.3"
   }
 }
