--- a/demos/payments/package.json
+++ b/demos/payments/package.json
@@ -36,12 +36,6 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
-    "@types/node": "22.18.13",
-    "dotenv-cli": "8.0.0",
-    "eslint": "9.27.0",
-    "tsx": "4.19.4",
-    "typescript": "5.7.3",
-    "vitest": "3.2.4"
+    "@repo/typescript-config": "workspace:*"
   }
 }
