--- a/package.json
+++ b/package.json
@@ -45,11 +45,17 @@
     "@ianvs/prettier-plugin-sort-imports": "4.7.0",
     "@prettier/plugin-oxc": "0.0.4",
     "@repo/typescript-config": "workspace:*",
+    "@types/node": "22.18.13",
+    "dotenv-cli": "8.0.0",
+    "eslint": "9.27.0",
     "prettier": "3.6.2",
     "prettier-plugin-jsdoc": "1.3.3",
     "prettier-plugin-packagejson": "2.5.19",
+    "tsdown": "0.11.12",
+    "tsx": "4.19.4",
     "turbo": "2.5.3",
-    "typescript": "5.7.3"
+    "typescript": "5.7.3",
+    "vitest": "3.2.4"
   },
   "packageManager": "pnpm@10.11.0",
   "engines": {
