Use pnpm catalogs for shared versions
This allows us to update package versions in lockstep without updating
many package.json files at once

--- a/demos/e2e/package.json
+++ b/demos/e2e/package.json
@@ -27,8 +27,8 @@
   "dependencies": {
     "@repo/cli-tools": "workspace:*",
     "agentcommercekit": "workspace:*",
-    "valibot": "1.1.0",
-    "viem": "2.29.4"
+    "valibot": "catalog:",
+    "viem": "catalog:"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
