--- a/tools/cli-tools/package.json
+++ b/tools/cli-tools/package.json
@@ -39,10 +39,6 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/figlet": "1.7.0",
-    "@types/node": "22.18.13",
-    "eslint": "9.27.0",
-    "typescript": "5.7.3",
-    "vitest": "3.2.4"
+    "@types/figlet": "1.7.0"
   }
 }
