refactor: clean up Solana payment integration
Address review feedback and improve project conformance:

- Remove gill, bs58, @solana/keys, @solana/addresses dependencies
- Use ACK's generateKeypair and bytesToBase58 for Solana key generation
- Replace hardcoded chain ID with solana.chainId constant
- Extract helpers: networkLabel, executePayment, fetchBalance,
  extractSignerPubkeys, fetchTransaction
- Replace console.log/console.error with log() from cli-tools
- Remove unnecessary comments and unused catch parameters
- Add lamports to cspell config
- Clean up docs: placeholder address, remove chain-specific sections

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -2,13 +2,18 @@ language: en
 words:
   - agentcommercekit
   - bitstring
+  - blockhash
   - caip
   - dbname
+  - devnet
   - healthcheck
   - keypair
+  - lamports
   - multibase
+  - multicall
   - multicodec
   - multikey
+  - pubkeys
   - secp256
   - skyfire
   - solana
