--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "turbo build",
     "check": "turbo check",
     "check:format": "prettier --check .",
-    "check:packages": "pnpx @manypkg/cli check",
+    "check:packages": "pnpm dlx @manypkg/cli check",
     "check:types": "turbo check:types",
     "clean": "turbo clean && git clean -xdf .turbo node_modules/.cache",
     "demo:e2e": "pnpm --filter ./demos/e2e demo",
@@ -33,7 +33,7 @@
     "lint": "turbo lint",
     "lint:fix": "turbo lint:fix",
     "nuke": "pnpm run clean && git clean -xdf demos/**/node_modules docs/**/node_modules examples/**/node_modules packages/**/node_modules tools/**/node_modules node_modules",
-    "outdated": "pnpx npm-check-updates --interactive --format group --workspaces",
+    "outdated": "pnpm dlx npm-check-updates --interactive --format group --workspaces",
     "publish:packages": "turbo build && changeset publish",
     "release": "./bin/release",
     "setup": "./bin/setup",
