Use oxlint, oxfmt in place of eslint, prettier

--- a/turbo.json
+++ b/turbo.json
@@ -6,6 +6,12 @@
     "//#check:format": {},
     "//#check:packages": {},
     "//#format": {},
+    "//#lint": {
+      "dependsOn": ["^build"]
+    },
+    "//#lint:fix": {
+      "dependsOn": ["^build"]
+    },
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
@@ -14,7 +20,7 @@
     "check": {
       "dependsOn": [
         "//#check:format",
-        "lint",
+        "//#lint",
         "check:types",
         "test",
         "//#check:packages"
@@ -32,13 +38,7 @@
       "persistent": true
     },
     "fix": {
-      "dependsOn": ["lint:fix", "//#format"]
-    },
-    "lint": {
-      "dependsOn": ["^build"]
-    },
-    "lint:fix": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["//#lint:fix", "//#format"]
     },
     "setup": {
       "dependsOn": ["^setup"],
